# Blackreach

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  blackreach.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
blackreach/: __init__.py  __main__.py  action_tracker.py  agent.py  api.py  browser.py  cache.py  captcha_detect.py  cli.py  cloudflare_bypass.py  config.py  content_verify.py  cookie_manager.py  debug_tools.py  detection.py  dom_walker.py  download_history.py  download_queue.py  error_recovery.py  exceptions.py  goal_engine.py  knowledge.py  llm.py  logging.py  memory.py  metadata_extract.py  multi_tab.py  nav_context.py  observer.py  parallel_ops.py  planner.py  progress.py  rate_limiter.py  resilience.py  retry_strategy.py  search_intel.py  session_manager.py  site_handlers.py  source_manager.py  stealth.py  (+4 more)
deep_work_logs/: code_findings_10hr.md  code_findings_20260124_073742.md  code_findings_20260124_074111.md  code_prompt.md  code_quality_findings.md  continuous_status.json  decision_output.txt  implementation_cycle_1.md  implementation_cycle_2.md  implementation_cycle_3.md  implementation_cycle_4.md  implementation_session.md  latest_tests.txt  launch_prep_done.md  next_task.json  performance_findings.md  performance_findings_10hr.md  performance_findings_20260124_073742.md  performance_findings_20260124_074111.md  performance_prompt.md  priority_issues.md  review_cycle_1.md  review_cycle_2.md  review_cycle_3.md  security_findings.md  security_findings_10hr.md  security_findings_20260124_073742.md  security_findings_20260124_074111.md  security_prompt.md  session_summary.json  smart_status.json  test_cycle_1.md  test_cycle_4.md  test_findings_20260124_073742.md  test_findings_20260124_074111.md  test_gap_findings.md  test_gaps_findings.md  test_prompt.md  user_test_findings.md  ux_findings_10hr.md  (+13 more)
docs/: AUTONOMOUS_TASKS.md  QUICKSTART.md  ROADMAP_TO_V4.md  START_HERE.md  beta-0.0.4-plan.md  session-summary-2026-01-23.md
examples/: 01_web_research.py  02_download_paper.py  03_github_readme.py  04_multi_provider.py  05_session_resume.py  06_custom_callbacks.py  README.md
learning/: 00_FOUNDATIONS.md  03_MEMORY_INTEGRATION.md  07_SESSION_LOG.md  09_RUN2_FINDINGS.md  10_PLANNER.md  11_TESTING_AND_ERROR_HANDLING.md  12_AUTONOMOUS_REVIEW_SESSION.md  13_VERSION_0.5_TO_1.5_JOURNEY.md
mcp_server/: blackreach_http_server.py  server.py
portfolio/: 60_day_job_hunt_plan.md  GITHUB_README_TEMPLATE.md  acquisition_targets_40k.md  ai_browser_startup_analysis.md  build_plan_mvp.md  competitive_analysis.md  cover_letter_template.md  job_helper.py  resume_template.md
prompts/: act.txt  observe.txt  plan.txt  react.txt  think.txt
scripts/: deep_work_orchestrator.py  deep_work_timer.sh  (+1 more)
(+80 files in other folders)
